@@ -1,3 +1,7 @@
+2005-08-16  Joerg Wunsch <j@uriah.heep.sax.de>
+
+	* avrdude.conf.in: Add support for the AT90PWM2/3.
+
 2005-07-27  Joerg Wunsch <j@uriah.heep.sax.de>
 
 	(This work has been done as part of a contract with Atmel, Dresden.)
